unpackaged/main/default/objects/InsideConversation__c/InsideConversation__c.object-meta.xml
<CustomObject>
    <label>Inside Conversation</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inside Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>