unpackaged/main/default/objects/InsideConversation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account associated with the Conversation</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inside Conversations</relationshipLabel>
    <relationshipName>InsideConversations</relationshipName>
    <type>Lookup</type>
</CustomField>