unpackaged/main/default/objects/InsideConversation__c/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce User the Conversation was Last Assigned to</description>
    <label>AssignedTo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InsideConversations</relationshipName>
    <type>Lookup</type>
</CustomField>