unpackaged/main/default/objects/InsideConversation__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Case/s associated with the Conversation</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Inside Conversations</relationshipLabel>
    <relationshipName>InsideConversations</relationshipName>
    <type>Lookup</type>
</CustomField>