unpackaged/main/default/objects/InsideConversation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact associated with the Conversation</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inside Conversations</relationshipLabel>
    <relationshipName>InsideConversations</relationshipName>
    <type>Lookup</type>
</CustomField>