unpackaged/main/default/objects/InsideConversation__c/fields/ConversationId__c.field-meta.xml
<CustomField>
    <fullName>ConversationId__c</fullName>
    <description>The unique INSIDE Conversation Identifier</description>
    <label>ConversationId</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>