unpackaged/main/default/objects/InsideConversation__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <description>The INSIDE Conversation Disposition</description>
    <label>Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>