unpackaged/main/default/objects/InsideConversation__c/fields/Ended__c.field-meta.xml
<CustomField>
    <fullName>Ended__c</fullName>
    <description>The Date/Time the Conversation Ended</description>
    <label>Ended</label>
    <type>DateTime</type>
</CustomField>