unpackaged/main/default/objects/InsideConversation__c/fields/Subsite__c.field-meta.xml
<CustomField>
    <fullName>Subsite__c</fullName>
    <description>The INSIDE Subsite Name</description>
    <label>Subsite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>