unpackaged/main/default/objects/InsideConversation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The Type of Conversation (i.e. Chat)</description>
    <label>Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>