unpackaged/main/default/objects/InsideConversation__c/fields/WaitTime__c.field-meta.xml
<CustomField>
    <fullName>WaitTime__c</fullName>
    <description>The Wait time in seconds that the Account/Contact waited before receiving the first Reply</description>
    <label>WaitTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>