unpackaged/main/default/objects/InsideConversation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ConversationId__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Description__c</columns>
    <columns>Type__c</columns>
    <columns>Account__c</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>